[tool.poetry]
name = "qraiter"
version = "0.1.0"
description = "Pet project, an QR code waiter for manual check-out."
authors = ["Roman <roman.furzykov@pwr.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
